--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@react-navigation/stack": "^6.3.16",
     "apisauce": "^3.0.0",
     "expo": "~48.0.6",
+    "expo-app-loading": "^2.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-location": "~15.1.1",
     "expo-permissions": "~14.1.1",
+    "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.2.9",
@@ -31,7 +33,9 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "sharp-cli": "^4.1.0",
-    "yup": "^1.0.2"
+    "yup": "^1.0.2",
+    "expo-notifications": "~0.18.1",
+    "expo-device": "~5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
