prepare for publish

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,11 @@
   "cSpell.words": [
     "apisauce",
     "avenir",
+    "Bugsnag",
     "Formik",
     "Hamdi",
     "Pressable",
+    "Sellit",
     "Swipeable",
     "Walid"
   ]
