--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "donewithit",
+  "name": "sellit",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start --dev-client",
@@ -8,6 +8,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@bugsnag/expo": "^48.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/netinfo": "^9.3.7",
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -17,15 +18,16 @@
     "apisauce": "^3.0.0",
     "expo": "~48.0.6",
     "expo-app-loading": "^2.1.1",
+    "expo-device": "~5.2.1",
     "expo-image-picker": "~14.1.1",
     "expo-location": "~15.1.1",
+    "expo-notifications": "~0.18.1",
     "expo-permissions": "~14.1.1",
     "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.2.9",
     "lottie-react-native": "5.1.4",
-    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "~2.9.0",
@@ -33,9 +35,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "sharp-cli": "^4.1.0",
-    "yup": "^1.0.2",
-    "expo-notifications": "~0.18.1",
-    "expo-device": "~5.2.1"
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
